# Hello-project

./: CMakeLists.txt
root/: CMakeLists.txt
root/LibProject/: CMakeLists.txt
root/LibProject/inc/: test.h
root/LibProject/src/: CMakeLists.txt  test.cpp
root/MainProject/: CMakeLists.txt
root/MainProject/inc/: main.h
root/MainProject/src/: CMakeLists.txt
